# juff

./: .gitmodules  .pre-commit-hooks.yaml  LICENSE  README.md  example_ruff_parser.py  juff.example.toml  juff.toml  pyproject.toml
.github/workflows/: release-juff.yml  test.yml
juff/: __init__.py  cli.py  config.py  logging.py  runner.py  venv_manager.py
juff/tools/: __init__.py  add_trailing_comma.py  base.py  black.py  docformatter.py  flake8.py  flynt.py  isort.py  perflint.py  pydoclint.py  pylint.py  pyupgrade.py  refurb.py  ruff.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_interface_parity.py  test_config.py  test_config_advanced.py  test_config_integration.py  test_e2e.py  test_tools.py  test_venv_manager.py
tests/fixtures/: breaks_many_rules.py  clean_file.py  has_syntax_errors.py  has_unused_imports.py  mixed_issues.py  needs_formatting.py  old_python_syntax.py  ruff_cli_spec.json  unsorted_imports.py
tests/fixtures/configs/: base.toml  child_extends.toml  comprehensive.toml  grandparent.toml  minimal.toml  pyproject_juff.toml  pyproject_ruff.toml  ruff_migration.toml
tests/fixtures/configs/integration_project/: __init__.py  juff.toml  main.py
tests/fixtures/configs/integration_project/migrations/: 001_initial.py
tests/fixtures/configs/integration_project/tests/: test_example.py
