[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juff"
version = "0.1.0"
description = "A faithful Python-first drop-in replacement for ruff, using the original visionary tools (flake8, black, pyupgrade, isort, etc.) via managed venv."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jason Mars", email = "jason@mars.ninja"}
]
maintainers = [
    {name = "Jason Mars", email = "jason@mars.ninja"}
]
keywords = [
    "juff",
    "ruff",
    "linter",
    "formatter",
    "python",
    "flake8",
    "black",
    "pyupgrade",
    "isort",
    "code-quality",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.1",
]

[project.scripts]
juff = "juff.cli:main"

[project.urls]
Homepage = "https://jaseci.org"
Repository = "https://github.com/Jaseci-Labs/juff"
Issues = "https://github.com/Jaseci-Labs/juff/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["juff*"]
